# cpp-method-wrapper

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  test_wrapper_gtest.cpp  wrapper.h
